# SxP4r

./: .gitignore  Makefile  Makefile.am  Makefile.in  Manifest.txt  Rakefile  Readme.txt  ReleaseNotes.txt  aclocal.m4  cEci.cpp  cJulian.h  cNoradSDP4.cpp  config.status  configure  configure.ac  globals.h  now  stdafx.cpp  sxp4r  sxp4r.cpp  test.rb
.deps/: cEci.Po  cJulian.Po  cNoradBase.Po  cNoradSDP4.Po  cNoradSGP4.Po  cOrbit.Po  cSite.Po  cTLE.Po  cVector.Po  coord.Po  globals.Po  main.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
ext/SxP4r/: cEci.h  cNoradBase.h  cOrbit.cpp  cSite.cpp  cVector.cpp
ext/sxp4r/: cJulian.cpp  cNoradBase.cpp  cNoradSGP4.cpp  cOrbit.h  cSite.h  cTLE.cpp  cTLE.h  coord.cpp  coord.h  extconf.rb  globals.cpp  main.cpp  readme.txt  stdafx.h  sxp4r.cpp
