AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = sxp4r
sxp4r_SOURCES = cEci.cpp \
                cJulian.h \
                cNoradSDP4.cpp \
                cNoradSGP4.h \
                cOrbit.cpp \
                cSite.h \
                cVector.cpp \
                cEci.h \
                cNoradBase.cpp \
                cNoradSDP4.h \
                coord.cpp \
                cOrbit.h \
                cTLE.cpp \
                cVector.h \
                cJulian.cpp \
                cNoradBase.h \
                cNoradSGP4.cpp \
                coord.h \
                cSite.cpp \
                cTLE.h \
                globals.cpp \
                globals.h \
                main.cpp

dist_noinst_SCRIPTS = autogen.sh